--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		      <li class="nav-item">
 		        <a class="nav-link p-2 enlaces" id="integrantes" style="cursor:pointer;"><ion-icon name="people"></ion-icon> Integrantes</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link p-2 enlaces" href="https://docs.google.com/uc?export=download&id=1tsxrMeObKE8AYQIoQpA-TJ6E2KDUb4ra" style="cursor:pointer;"><ion-icon name="download"></ion-icon> Descarga</a>
+		      <li class="nav-item" style="margin-top: 3%;">
+		        <a class="p-2 enlaces" href="https://docs.google.com/uc?export=download&id=1tsxrMeObKE8AYQIoQpA-TJ6E2KDUb4ra" style="cursor:pointer;-ms-flex:1 1 auto;flex:1 1 auto;text-align:center;color:#495057"><ion-icon name="download"></ion-icon> Descarga</a>
 		      </li>
 		    </ul>
 		  </div>
